cabal-version: 2.4
name: cisco-asa-syslog
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2020 Layer 3 Communications
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules: Cisco.Asa.Syslog
  build-depends:
    , base >=4.13 && <5
    , byteslice >=0.2 && <0.3
    , bytesmith >=0.3.6 && <0.4
    , primitive-unlifted >=0.1.2 && <0.2
    , text-short >=0.1.3 && <0.2
    , ip >=1.7.1 && <1.8
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O2 -Wall

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall -O2
  build-depends:
    , base >=4.12.0.0 && <5
    , byteslice >=0.2
    , cisco-asa-syslog
    , ip
    , text-short >=0.1.3
